[package]
name = "exprz"
version = "0.0.14"
edition = "2018"
authors = ["Brandon H. Gomes <bh.gomes@rutgers.edu>"]
documentation = "https://docs.rs/exprz"
homepage = "https://github.com/qdeduction/exprz"
repository = "https://github.com/qdeduction/exprz"
readme = "README.md"
license = "ISC"
keywords = ["expressions", "expression-parser", "s-expressions", "s-expr"]
categories = ["data-structures", "no-std", "parsing"]
description = "An Expression Library"
exclude = [""]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
is-it-maintained-issue-resolution = { repository = "qdeduction/exprz" }
is-it-maintained-open-issues = { repository = "qdeduction/exprz" }
maintenance = { status = "actively-developed" }

[features]
# No default features enabled
default = []

# Adds allocation
alloc = []

# [EXPERIMENTAL] Adds buffered expression
buffered = ["alloc"]

# [EXPERIMENTAL] Adds multi-expressions
multi = []

# [EXPERIMENTAL] Removes all panics
no-panic = []

# [EXPERIMENTAL] Adds parsing support
parse = []

# [EXPERIMENTAL] Adds pattern trait
pattern = []

# [EXPERIMENTAL] Adds shape trait
shape = []

# Enables all stable features
stable = [
    "alloc",
]

# Enables all experimental features
experimental = [
    "buffered",
    "multi",
    "no-panic",
    "parse",
    "pattern",
    "rayon",
    "serde",
    "shape",
]

# Enables all features
all = [
    "stable", 
    "experimental",
]

[dependencies]
rayon = { version = "1.5.0", optional = true }
serde = { version = "1.0.124", optional = true }
