[package]
name = "exprz-core"
version = "0.0.3"
edition = "2018"
authors = ["Brandon H. Gomes <bh.gomes@rutgers.edu>"]
documentation = "https://docs.rs/exprz-core"
homepage = "https://github.com/qdeduction/exprz"
repository = "https://github.com/qdeduction/exprz"
readme = "README.md"
license = "ISC"
keywords = ["expressions", "expression-parser", "s-expressions", "s-expr"]
categories = ["data-structures", "no-std", "parsing"]
description = "ExprZ Core Library"
exclude = [""]

[badges]
is-it-maintained-issue-resolution = { repository = "qdeduction/exprz" }
is-it-maintained-open-issues = { repository = "qdeduction/exprz" }
maintenance = { status = "actively-developed" }

